--- a/assets/stylesheets/task_board.css
+++ b/assets/stylesheets/task_board.css
@@ -1,5 +1,5 @@
 .task-column {
-    width: 200px;
+    width: 24%;
     float: left; 
     margin-right: 1em;
 }
@@ -7,6 +7,6 @@
 .issue {
     background-color: lightyellow;
     padding: 1em;
-    font-size: 1.2em;
-    font-family: 'The Girl Next Door', cursive;
+    font-size: 2em;
+    font-family: 'Sue Ellen Francisco', cursive;
 }
