Project module can now be enabled or disabled making the tab disappear; it also respects permissions, and will only be viewable to those with the 'View task board' permission

--- a/app/views/task_boards/index.html.erb
+++ b/app/views/task_boards/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul id="version-choice">
 <% @project.versions.each do |version| %>
-    <li><%= link_to version.name, '/task_boards/show/' + version.id.to_s %></li>
+    <li><%= link_to version.name, '/task_boards/show/' + version.id.to_s + '?project_identifier=' + version.project.identifier.to_s %></li>
 <% end %>
 </ul>
