Use protocol-relative URL for web font so we don't get mixed content warnings over SSL

--- a/app/views/task_boards/show.html.erb
+++ b/app/views/task_boards/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :header_tags do %>
-    <link href='http://fonts.googleapis.com/css?family=Coming+Soon&amp;v2' rel='stylesheet' type='text/css' />          
+    <link href='//fonts.googleapis.com/css?family=Coming+Soon&amp;v2' rel='stylesheet' type='text/css' />          
     <%= stylesheet_link_tag 'task_board.css', :plugin => 'redmine_task_board' %>
 <% end %>
 
