--- a/app/views/task_boards/index.html.erb
+++ b/app/views/task_boards/index.html.erb
@@ -2,6 +2,8 @@
 
 <ul id="version-choice">
 <% @project.versions.each do |version| %>
-    <li><%= link_to version.name, '/task_boards/show/' + version.id.to_s + '?project_identifier=' + version.project.identifier.to_s %></li>
+    <% if version.status == 'open' %>
+        <li><%= link_to version.name, '/task_boards/show/' + version.id.to_s + '?project_identifier=' + version.project.identifier.to_s %></li>
+    <% end %>
 <% end %>
 </ul>
