Added a grouped view by category
The display of the task board now shows everything grouped by category.
There was also a fix with the Issue patch which made me have to reboot
the server after every page load.

--- a/app/views/task_boards/_task_column.html.erb
+++ b/app/views/task_boards/_task_column.html.erb
@@ -1,11 +1,8 @@
-<div class="task-column">
-    <h3><%= title %></h3>
-    <% issues.each do |issue| %>
-        <div class="issue">
-            <a href="/issues/<%= issue.id %>">
-            #<%= issue.id %> - 
+<% issues.each do |issue| %>
+    <% if (issue_category.nil? and issue.category_id.nil?) or (!issue_category.nil? and issue.category_id == issue_category.id) %>
+        <a class="issue" href="/issues/<%= issue.id %>">
+            <small>#<%= issue.id %> - <%= issue.priority %> - Assigned to <%= (!issue.assigned_to.nil?) ? issue.assigned_to : 'nobody' %></small><br />
             <%= issue.subject %>
-            </a>
-        </div>
+        </a>
     <% end %>
-</div>
+<% end %>
